# spaceKLIP

./: .gitignore  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.rst  README.txt  __init__.py  config.yaml  engine.py  io.py  preproc_pyklip.py  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  run_pipeline.py  run_pyklip_config.py  run_pyklip_hip65426.py  run_pyklip_hr8799.py  setup.py  subtraction.py  tox.ini
.github/ISSUE_TEMPLATE/: bug-template.yml  documentation-template.yml  improvement-template.yml
docs/: requirements-docs.txt
example_scripts/: test_niriss_sky_1093.py
examples/: HIP65426_NIRCam_JML.ipynb  example_config.yaml  example_miri_sky_1386.py  example_nircam_sim_1441.py  example_nircam_sky_1386.py  example_nircam_sky_1441.py  example_niriss_sky_1093.py  hr8799_config.yaml  jwst_psf_tests.ipynb  nircam_config.yaml  run_compinject.py  run_planetkiller.py  sort_uncal.py  spring_symposium_notebook_ers.ipynb
pyKLIP_for_Webb/: __init__.py  companion.py  contrast.py  engine.py  io.py  utils.py
spaceKLIP/: __init__.py  _version.py  analysis.py  analysistools.py  classpsfsubpipeline.py  companion.py  constants.py  contrast.py  coron1pipeline.py  coron2pipeline.py  coron3pipeline.py  database.py  engine.py  expjumpramp.py  fnoise_clean.py  imagetools.py  imgprocess.py  io.py  logging_tools.py  make_psfmasks.py  mast.py  plotting.py  preprocess_bar.py  preprocess_rnd.py  psf.py  pyklippipeline.py  rampfit.py  sk_style.mplstyle  starphot.py  subtraction.py  synthetic_psfs.py  utils.py  wcs_utils.py
spaceKLIP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: HD114174-round.yaml  HIP65426_F1140.yaml  HIP65426_F1550.yaml  HIP65426_NIRCam_JML.ipynb  HIP65426_NIRCam_JML.yaml  car-31_config.yaml  example_config.yaml  import_test.py  miri_config.yaml  nircam_config.yaml  nircam_config_hip65426b.yaml  nircam_config_spring_symposium_ers.yaml  notebook_pipeline.ipynb  run_compinject.py  run_pipeline.py  run_planetkiller.py  test_miri_sky_1386.py  test_nircam_sim_1441.py  test_nircam_sky_1386.py  test_nircam_sky_1441.py  test_niriss_sky_1093.py
(+88 files in other folders)
