[project]
name = "spaceKLIP"
description = 'Data reduction pipeline for JWST Coronagraphy'
readme = "README.rst"
version = "0.2.0"
authors = [
  { name="Jens Kammerer", email="jkammerer@stsci.edu" },
  { name="Aarynn Carter", email="aarynn.carter@gmail.com" },
  { name="The JWST Direct Observations of Exoplanetary Systems (ERS-1386) Collaboration"},
]


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[tool.setuptools.packages.find]
where = ["spaceKLIP"]
