[project]
name = "spaceKLIP"
description = 'Data reduction pipeline for JWST Coronagraphy'
readme = "README.rst"
dynamic = ["version", "dependencies"] # version will come from setuptools.scm
authors = [
  { name="Jens Kammerer", email="jkammerer@stsci.edu" },
  { name="Aarynn Carter", email="aarynn.carter@gmail.com" },
  { name="The JWST Direct Observations of Exoplanetary Systems (ERS-1386) Collaboration"},
]


[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "spaceKLIP/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}

[tool.setuptools.packages.find]
where = ["spaceKLIP"]
