[project]
name = "spaceKLIP"
description = 'Data reduction pipeline for JWST high-contrast imaging'
readme = "README.rst"
dynamic = ["version", "dependencies"] # version will come from setuptools.scm
authors = [
  { name="Jens Kammerer", email="jkammerer@stsci.edu" },
  { name="Aarynn Carter", email="aarynn.carter@ucsc.edu" },
  { name="The JWST Direct Observations of Exoplanetary Systems (ERS-1386) Collaboration"},
]


[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "spaceKLIP/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}
